# DataSquash

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
datasquash/: __init__.py
datasquash/video_compression/: Snakefile  extract_frames.py  generate_eval_plots.py  generate_label_files.py
datasquash/video_compression/bash_scripts/: generate_slp_files.sh  reencode_videos.sh  run_training.sh
datasquash/video_compression/notebooks/: notebook_extract_frames.py
datasquash/video_compression/pipelines/: Snakefile
docs/source/: api_index.rst  conf.py  index.rst
tests/data/: courtship_labels.slp
tests/test_unit/: test_video_compression.py
